--- a/README.Rmd
+++ b/README.Rmd
@@ -48,6 +48,6 @@ drawNet(net,draw="static",layout=layout_as_tree,margin=0.3,size=30,vertex.shape=
 net <- cleanNet(net)
 trackfuns <- extractFuns(net)
 
-runEval("Examples/code1.R",trackfuns,ref,net)
+runEval("examples/01-simplest/code1.R",trackfuns,ref,net)
 ```
 
