--- a/README.Rmd
+++ b/README.Rmd
@@ -32,22 +32,59 @@ devtools::install_github("koenvanbenthem/VeRitas")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example which shows you how to solve a common problem. Assume you have given students the assignment to add up the squares of the number 1 up to and including 5 (i.e. $1^2+2^2+3^2+4^2+5^2$). 
 
+Start by defining a reference implementation in the file ref1.R, that contains:
+```{r class.source="filecontent", code = readLines("examples/01-simplest/ref1.R"),eval=FALSE,background="red"}
+```
+The reference thus holds the correct solution, as well as a common wrong solution. We can now, as a teacher, construct a decision network to give feedback on student code. Essentially we construct a list of nodes, eacht of which takes five input arguments:
+
+1. The check that should be performed (can be one of has_val, has_each_val, did_call, has_vec)
+2. The node where the evaluator should move to next if the condition is true (goT)
+3. The node where the evaluator should move to next if the condition is false (goT)
+4. The message to display if the condition is true (doT)
+5. The message to display if the condition is false (doF)
+
+Variables from the reference solution can be accessed through ref$varname.
 ```{r example,fig.width=7,fig.height=7,out.width='75%',out.height='75%',fig.align='center',warning=FALSE,message=FALSE}
 library(VeRitas)
 
-ref <- list(a=17,
-            b=21)
-
-net <- list(start=node(has_val(ref$a),goT=END,goF=S1,doT="[✓] a is found!",doF="[x] a is not found"),
-            S1=node(did_call("plot"),goT=END,goF=END,doT="[?] Why plot? Please find a instead!")
+net <- list(start=node(has_val(ref$sol),
+                       goT=S2,goF=S1,
+                       doT="[✓] Sum is found!",
+                       doF="[x] Sum not found"),
+            
+            S1=node(has_val(ref$wrongsol),
+                    goT=END,goF=END,
+                    doT="[?] Did you square?"),
+            
+            S2=node(did_call("sum","base"),
+                    goT=END,goF=END,
+                    doF="[?] Could the sum function help?")
             )
-library(igraph)
-drawNet(net,draw="static",layout=layout_as_tree,margin=0.3,size=30,vertex.shape="none",vertex.label.color="black")
-net <- cleanNet(net)
-trackfuns <- extractFuns(net)
-
-runEval("examples/01-simplest/code1.R",trackfuns,ref,net)
 ```
-
+One can visualise the graph with help of the igraph function and the drawNet function wrapper provided in VeRitas:
+```{r message=FALSE, warnings=FALSE,fig.width=9,fig.height=9,out.width='75%',out.height='75%',fig.align='center'}
+library(igraph)
+drawNet(net,draw="static",layout=layout_as_tree,margin=0.3,
+        size=30)
+```
+Use draw="interactive" to use igraph's interactive plotting module. Now one can turn the decision network (net) and reference implementation together into an assignment.
+```{r}
+MyAssignment <- prepareAssignment(net,"examples/01-simplest/ref1.R")
+```
+If one has a file code1.R in the folder examples/01-simplest, that contains the following code:
+```{r code = readLines("examples/01-simplest/code1.R"),eval=FALSE}
+```
+One can check it by running:
+```{r}
+runSingle("examples/01-simplest/code1.R",MyAssignment)
+```
+A different file, code2.R that contains the following code:
+```{r code = readLines("examples/01-simplest/code2.R"),eval=FALSE}
+```
+can be checked too, and gives:
+```{r}
+runSingle("examples/01-simplest/code2.R",MyAssignment)
+```
+For more examples, such as how to check many student scripts at the same time, please see the articles on this website.
